Clean up yang-model-api mocking
Use mockito-configuration and MockitoExtension to be really crisp about
mocking.

Change-Id: I9102c75f15ef7cd114f656d28c94c92c54e4bd60
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>